Editando el componente JornalScreen, creación del sidebar con estilos correspondientes.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,4 +7,6 @@
 
 //importamos componentes
 @import './components/auth';
-@import './components/buttons'
+@import './components/buttons';
+@import './components/links';
+@import './components/journal';
