--- a/src/styles/components/_journal.scss
+++ b/src/styles/components/_journal.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     background-color: $dark-grey;
     color: $white;
-    height: 100%;
+    height: 100vh;
     padding-left: 10px;
     padding-right: 10px;
     width: 450px;
@@ -24,6 +24,8 @@
 .journal__sidebar-navbar h3{
     font-weight: lighter;
 }
+
+
 
 .journal__new-entry{
     display: flex;
@@ -41,3 +43,59 @@
         color: darken($color: $white, $amount: 20);
     }
 }
+
+.jornal__entries{
+    flex: 1 1 auto;
+    margin-top: 30px;
+    //overflow-y: scroll;
+
+}
+
+.journal__entry{
+    display: flex;
+    margin-bottom: 10px;
+    background-color: $white;
+    border-radius: 4px;
+    color: $dark-grey;
+    overflow: hidden;
+
+    &:hover{
+        background-color: lighten($color: $dark-grey, $amount: 69)
+    }
+
+}
+
+.jornal__entry-picture{
+    height: 75px;
+    width: 75px;
+}
+
+.jornal__entry-body{
+    padding: 10px;
+
+
+}
+
+.jornal__entry-title{
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.jornal__entry-content{
+    font-size: 13px;
+}
+
+.journal__entry-date{
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10px;
+
+}
+
+.journal__entry-date span{
+    font-size: 15px;
+}
+
